Fixing spacing

--- a/styles/compile/hero.sass
+++ b/styles/compile/hero.sass
@@ -84,7 +84,7 @@ section[is="hero"]
     transition: all 0.8s
     background: $white
     border-radius: $border-s
-    margin: 0 units(3) units(3) units(3)
+    margin: units(2) units(3) units(3) units(3)
 
     &.dark
       background: none
